test/testcases/malgo/error/QualifiedImport.mlg
module {..} = import "../../../../runtime/malgo/Builtin.mlg"
module P = import "../../../../runtime/malgo/Prelude.mlg"

def main = {
  putStrLn "Hello, world!"
}
